# bitbots_msgs

./: CMakeLists.txt  package.xml
action/: VisualCompassSetGroundTruth.action
msg/: ProfileDataStamped.msg  ReferenceFrame.msg  VisualCompassSetGroundTrouth.msg  WalkCommand.msg
